--- a/firstsp/src/main/resources/application.properties
+++ b/firstsp/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password=sejal@2001
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=8080
